	* Modified 'SyGpioServer' in 'sy/sygpio_server.cpp' to use
	double signalling for GPIO events.
2017-03-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 7:3:4.
	* Incremented the package version to 0.11.12.
2017-06-20 Fred Gleason <fredg@paravelsystems.com>
	* Changed return type of 'SyMcastSocket::subscribe()' and
	'SyMcastSocket::unsubscribe()' methods from 'void' to 'bool'.
2017-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyEthMonitor' class in 'sy/syethmonitor.cpp' and
	'sy/syethmonitor.h'.
	* Added 'syethmonitortest' in 'tests/'.
2017-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyGpioServer(SyRouting *,SyEthMonitor *,QObject *)'
	constructor to the 'SyGpioServer' class.
2017-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyAdvServer(SyRouting *,SyEthMonitor *,bool,QObject *)'
	constructor to the 'SyAdvServer' class.
2017-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 8:0:5.
	* Incremented the package version to 0.12.0.
2017-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::id()' method in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
2017-07-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:0:6.
	* Incremented the package version to 0.13.0.
2017-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that broke metering updates
	on xNodes.
2017-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:1:6.
	* Incremented the package version to 0.13.1.
2017-08-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'SyLwrpClient::setClipMonitor()' and
	'SyLwrpClient::setSilenceMonitor()' methods to work properly with
	PowerStation 'LVL' commands.
2017-08-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 9:2:6.
	* Incremented the package version to 0.13.2.